regression/fail/type-use-before-def.sml
val r = ref NONE
datatype t = T
val _ = r := SOME T
